--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.6
+  flutter_screenutil: ^5.6.0
+  cached_network_image: ^3.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
